@@ -36,6 +36,19 @@ if ($ADMIN->fulltree) {
     $description = new lang_string('forcedefaultmaxcoursesdesc', 'block_my_courses');
     $setting = new admin_setting_configcheckbox($name, $title, $description, 1, PARAM_INT);
     $settings->add($setting);
+	
+	
+	$name 			= 'block_my_courses/coursegridwidth';
+    $title 			= new lang_string('coursegridwidth', 'block_my_courses');
+    $description 	= new lang_string('coursegridwidthdesc', 'block_my_courses');
+    $setting 		= new admin_setting_configselect($name, $title, $description, 4, array(
+		'12' => '100%',
+		'6' => '50%',
+		'4' => '33%',
+		'3' => '23%'
+	));
+    $settings->add($setting);
+	
 
     $name = 'block_my_courses/showchildren';
     $title = new lang_string('showchildren', 'block_my_courses');
